--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/paw-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lindsay's Good Dog Services</title>
+    <meta
+      name="description"
+      content="Lindsay's Good Dog Services provides grooming, puppy classes, and dog training services. The business is located in Pullman, Washington"
+    />
   </head>
   <body>
     <div id="root"></div>
